--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <head>
-    <link rel="styleshhet" href="style.css">
+    <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
     <div id="navbar">
