Move CSS, update head

--- a/index.html
+++ b/index.html
@@ -1,17 +1,25 @@
-<head>
-    <link rel="stylesheet" type="text/css" href="style.css">
-</head>
-<body>
-    <div id="navbar">
-        <ul id="nav-links">
-            <li>Home</li>
-            <li>Projects</li>
-            <li>About</li>
-        </ul>
-        <div/>
-            <div id="main">
-                <h1>My template site</h1>
-                <p>Lorem ipsum</p>
-            </div>
+<!doctype html>
+<html lang="en">
+    <head>
+        <meta charset="utf-8">
+        <meta name="description" content="jnawjux - github">
+        <title>jnawjux - github</title>
+        <link rel="stylesheet" href="css/style.css">
+        <link href='http://fonts.googleapis.com/css?family=Oxygen'
+            rel='stylesheet' type='text/css'>
+    </head>
+    <body>
+        <div id="navbar">
+            <ul id="nav-links">
+                <li>Home</li>
+                <li>Projects</li>
+                <li>About</li>
+            </ul>
+            <div/>
+                <div id="main">
+                    <h1>My template site</h1>
+                    <p>Lorem ipsum</p>
+                </div>
 
-        </body>
+            </body>
+        </html>
